@@ -1,0 +1,35 @@
+/*
+ *  Copyright 2012 Persist Software
+ *  
+ *   http://www.persist.com
+ *   Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+*/
+
+package com.persist.resolve
+
+import com.persist._
+import JsonOps._
+
+private[persist] class Newest2 extends Resolve.Resolve2 {
+    
+  def init(config: Json) {}
+
+  def resolve2(key:Json, cv1: Json, value1: Json, deleted1: Boolean,
+      cv2: Json, value2: Json, deleted2: Boolean): (Boolean, Json) = {
+    if (ClockVector.newer(cv1,cv2)) {
+      (deleted1, value1)
+    } else {
+      (deleted2, value2)
+    }
+  }
+}
